[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "mokapot"
authors = [{name = "William E. Fondrie", email = "fondriew@gmail.com"}]
description = "Fast and flexible semi-supervised learning for peptide detection"
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.18.1",
    "pandas>=1.0.3",
    "polars>=0.19.0",
    "scikit-learn>=0.22.1",
    "numba>=0.48.0",
    "matplotlib>=3.1.3",
    "lxml>=4.6.2",
    "triqler>=0.6.2",
    "joblib>=1.1.0",
    "importlib-metadata>=5.1.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/wfondrie/mokapot"
Documentation = "https://mokapot.readthedocs.io"
"Bug Tracker" = "https://github.com/wfondrie/mokapot/issues"
"Discussion Board" = "https://github.com/wfondrie/mokapot/discussions"

[project.optional-dependencies]
docs = [
    "numpydoc>=1.0.0",
    "sphinx-argparse>=0.2.5",
    "sphinx-rtd-theme>=0.5.0",
    "nbsphinx>=0.7.1",
    "ipykernel>=5.3.0",
    "recommonmark>=0.5.0",
]
dev = [
    "pre-commit>=2.7.1",
    "black>=19.10b0",
]

[project.scripts]
mokapot = "mokapot.mokapot:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]

[tool.ruff]
select = ["E", "F", "W", "C", "I", "D", "UP", "N", "ANN", "T20", "I001"]

# ANN101 Missing type annotation for `self` in method
# D213 Multi-line docstring summary should start at the second lin
# D203 1 blank line required before class docstring
# D100 Missing docstring in public module
# ANN102 Missing type annotation for `cls` in classmethod
# D401 First line of docstring should be in imperative mood
ignore = ["D213", "ANN101", "D203", "D100", "ANN102", "D401"]
fix = true
line-length = 79

[tool.ruff.per-file-ignores]
"*tests/*.py" = ["ANN", "N806"]
"__init__.py" = ["F401", "D104"]

[tool.ruff.pydocstyle]
convention = "numpy"


[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
