[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "mokapot"
authors = [{name = "William E. Fondrie", email = "fondriew@gmail.com"}]
description = "Fast and flexible semi-supervised learning for peptide detection"
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.18.1",
    "pandas>=1.0.3",
    "scikit-learn>=0.22.1",
    "numba>=0.48.0",
    "matplotlib>=3.1.3",
    "lxml>=4.6.2",
    "triqler>=0.6.2",
    "joblib>=1.1.0",
    "importlib-metadata>=5.1.0",
    "typeguard>=4.1.5",
    "pyarrow>=15.0.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/wfondrie/mokapot"
Documentation = "https://mokapot.readthedocs.io"
"Bug Tracker" = "https://github.com/wfondrie/mokapot/issues"
"Discussion Board" = "https://github.com/wfondrie/mokapot/discussions"

[project.optional-dependencies]
docs = [
    "numpydoc>=1.0.0",
    "sphinx-argparse>=0.2.5",
    "sphinx-rtd-theme>=0.5.0",
    "nbsphinx>=0.7.1",
    "ipykernel>=5.3.0",
    "recommonmark>=0.5.0",
]
dev = [
    "pre-commit>=2.7.1",
    "ruff>=0.4.4",
    "pytest>=8.2.2",
]

[project.scripts]
mokapot = "mokapot.mokapot:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]

[tool.ruff]
extend-exclude = ["docs/source/conf.py"]
line-length = 79
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "T20"]  # T20 is for print() statements.

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_parser_pepxml.py" = ["E501"]

[tool.ruff.format]
docstring-code-format = true
