[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4"]

[dependency-groups]
dev = [
  "twine>=6.0.1",
  "pre-commit>=2.7.1",
  "ruff>=0.8.1"
]
docs = [
  "numpydoc>=1.0.0",
  "sphinx-argparse>=0.2.5",
  "sphinx-rtd-theme>=0.5.0",
  "nbsphinx>=0.7.1",
  "ipykernel>=5.3.0",
  "recommonmark>=0.5.0"
]
profile = [
  "scalene",
  "memray"
]
test = [
  "pytest>=8.2.2",
  "pytest-cov>=6.0.0"
]

[project]
authors = [{name = "William E. Fondrie", email = "fondriew@gmail.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "numpy>=2.0.0,<3.0.0",
  "pandas>=1.0.3",
  "scikit-learn>=0.22.1",
  "triqler>=0.8.0",
  "joblib>=1.1.0",
  "importlib-metadata>=5.1.0",
  "typeguard>=4.1.5",
  "pyarrow>=15.0.0",
  "scipy>=1.13.0"
]
description = "Fast and flexible semi-supervised learning for peptide detection"
dynamic = ["version"]
license = {text = "Apache 2.0"}
name = "mokapot"
optional-dependencies = {plot = ["matplotlib>=3.1.3"], xml = ["lxml>=4.6.2"]}
requires-python = ">=3.9,<3.13"  # Upper threshold is required bc of numba

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.scripts]
mokapot = "mokapot.mokapot:main"

[project.urls]
"Bug Tracker" = "https://github.com/wfondrie/mokapot/issues"
"Discussion Board" = "https://github.com/wfondrie/mokapot/discussions"
Documentation = "https://mokapot.readthedocs.io"
Homepage = "https://github.com/wfondrie/mokapot"

[tool.pytest.ini_options]
norecursedirs = ["extra"]
testpaths = ["tests"]

[tool.ruff]
exclude = ["docs", "notebooks", "*.ipynb"]
extend-exclude = ["docs/source/conf.py"]
line-length = 79
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.ruff.lint]
select = ["E", "F", "T20", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"docs/**/*.ipynb" = ["T20"]
"test_parser_pepxml.py" = ["E501"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
