[metadata]
name = mokapot
author = William E. Fondrie
author_email = fondriew@gmail.com
description = Fast and flexible semi-supervised learning for peptide detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wfondrie/mokapot
project_urls =
    Documentation = https://mokapot.readthedocs.io
    Bug Tracker = https://github.com/wfondrie/mokapot/issues
    Discussion Board = https://github.com/wfondrie/mokapot/discussions
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.18.1
    pandas>=1.0.3
    scikit-learn>=0.22.1
    numba>=0.48.0
    matplotlib>=3.1.3
    lxml>=4.6.2
    triqler>=0.6.2
    joblib>=1.1.0

[options.extras_require]
docs =
    numpydoc>=1.0.0
    sphinx-argparse>=0.2.5
    sphinx-rtd-theme>=0.5.0
    nbsphinx>=0.7.1
    ipykernel>=5.3.0
    recommonmark>=0.5.0
dev =
    pre-commit>=2.7.1
    black>=19.10b0

[options.entry_points]
console_scripts =
    mokapot = mokapot.mokapot:main
